--- a/app/index.html
+++ b/app/index.html
@@ -32,6 +32,10 @@
                   fill="white" />
               </svg>
               <p>Sign in with Twitter</p>
+            </button>
+          </div>
+          <div class="hamburger--menu">
+              <img src="./Assets/Hamburger Menu.svg" alt="">
           </div>
         </nav>
 
@@ -57,7 +61,7 @@
                 <p>Sign in with Twitter</p>
               </button>
               <a href="">
-                <span>Learn More -></span>
+                <span>Learn More</span>
               </a>
             </div>
             <div class="header--conntent-footer">
@@ -83,6 +87,7 @@
 
           <div class="section-second">
             <img src="./Assets/Hero Image (Desktop View).png" alt="app" />
+            <img src="./Assets/Hero Image (Tablet View).png" alt="" class="tablet">
           </div>
         </div>
       </div>
